compiler/tests/en/errors/toplevel_const_after_func.salam
// EXPECT: E084
func helper: ret 1 end

const N := 1

func main: end
